--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     --crt-glow: rgb(27, 220, 200);
     --toc: rgba(248, 245, 239, 0.95);
     --thumb-shadow: -1px 2px 4px var(--shadow);
+    --thumb-press: inset 0 -3px 4px transparent;
     --thumb-shadow2: -1px 1px 3px var(--shadow2);
   }
     
@@ -52,6 +53,7 @@
     --crt-glow: rgb(255, 191, 0);
     --toc: rgba(4, 19, 38, 0.97);
     --thumb-shadow: 1px -2px 4px var(--bg);
+    --thumb-press: inset 0 -3px 4px var(--shadow2);
     --thumb-shadow2: 1px -2px 4px var(--highlight);
   }
   /* Switch sizing */
@@ -69,7 +71,7 @@
     --roll: 0deg;
     --speed: 300ms;
     display:inline-block;
-    --press: 1; 
+    --press: 1.0; 
     --press-y: 0px; 
   }
 
@@ -142,9 +144,9 @@
   }
   /* pressed state (mouse/touch) */
   .theme-toggle label:active {
-    --press: .90;                  /* shrink a bit */
+    --press: .80;                  /* shrink a bit */
     --press-y: 2px;                /* nudge down */
-    --thumb-shadow: inset 0 3px 4px var(--shadow2), var(--thumb-shadow2); /* look “pushed in” */
+    --thumb-shadow: inset 0 3px 4px var(--shadow2), var(--thumb-press), var(--thumb-shadow2); /* look “pushed in” */
   }
 
   /* Icons inside the thumb */
